# fault_sim_snova

./: README.md  attack.sage  main_attack.sage  snova_sage.sage
C/: CMakeLists.txt  Makefile  attack.c  keys.txt  run-sim.sh  snova_kernel.h  snova_sage.sage.py
C/aes/: aes.c  snova_aes.c
C/sage_version/: main.sage  main.sage.py  main_attack.sage.py  snova_faulty.sage  snova_sage.sage.py  utils.sage
C/test/: test.c
alg_6/: Makefile  SNOVA.sage  SNOVA_IMPLEMENTATION_SAGE_FAULT_ATTACK.ipynb  attack_alg_6.c  fault_snova.py  faults.h  gf16_fly.c  gf16_fly.h  sim_matrix.py  simulation.py  snova.c  snova_f.sage  snova_f.sage.py  snova_f.sagec  snova_kernel.h  snova_kernel_fault.h  snova_python.py  snova_sage.sage  snova_utils.c  snova_utils.h
